<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <!-- Weather Data -->
        <variable
            name="weatherModel"
            type="com.nooro.weatherapp.data.model.WeatherDataModel" />

        <variable
            name="temprature"
            type="String" />

        <variable
            name="isAPICalled"
            type="Boolean" />

        <import type="android.view.View" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:background="@color/white"
        android:padding="16dp">

        <!-- Search Bar -->
        <EditText
            android:id="@+id/edtSearchCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_box"
            android:drawableRight="@mipmap/ic_search"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/search_location"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="15sp" />


        <!-- No City Selected View -->
        <TextView
            android:id="@+id/tvNoCitySelected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins_semi_bold"
            android:gravity="center"
            android:text="@string/no_city_selected"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:visibility="@{weatherModel == null ? View.VISIBLE : View.GONE}" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvNoCitySelected"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins_semi_bold"
            android:gravity="center"
            android:text="@string/search_for_city"
            android:textColor="@color/text_color"
            android:textSize="15sp"
            android:visibility="@{weatherModel == null ? View.VISIBLE : View.GONE}" />

        <!-- Weather Details View when api is called-->
        <LinearLayout
            android:id="@+id/llWeatherDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtSearchCity"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp"
            android:visibility="@{weatherModel != null &amp;&amp; isAPICalled ? View.VISIBLE : View.GONE}"
            tools:visibility="visible">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="Weather Condition Image"
                app:imageUrl="@{weatherModel.weatherIcon}"
                tools:src="@mipmap/ic_launcher" />


            <!-- City Name -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvCityName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:text="@{weatherModel.cityName}"
                    android:textColor="@color/text_color"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    tools:text="Virginia Beach" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@mipmap/location" />
            </LinearLayout>


            <!-- Temperature -->
            <TextView
                android:id="@+id/tv_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text='@{temprature + "°"}'
                android:textColor="@color/text_color"
                android:textSize="60sp"
                android:textStyle="bold"
                tools:text="30" />

            <!-- Weather Details (Humidity, UV, Feels Like) -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/rounded_box_color"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="12dp">

                <!-- Humidity Section -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/humidity"
                        android:textColor="@color/search_text_color"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_value_humidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@{weatherModel.humidity + `%`}"
                        android:textColor="@color/weather_box_text_color"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        tools:text="20%" />
                </LinearLayout>

                <!-- UV Section -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/uv"
                        android:textColor="@color/search_text_color"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@{String.valueOf(weatherModel.uvIndex)}"
                        android:textColor="@color/weather_box_text_color"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        tools:text="4" />
                </LinearLayout>

                <!-- Feels Like Section -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/feels_like"
                        android:textColor="@color/search_text_color"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@{temprature + `°`}"
                        android:textColor="@color/weather_box_text_color"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        tools:text="38°" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <!-- Weather Details View when data get from SharedPreference-->
        <RelativeLayout
            android:id="@+id/rlWeatherStoredData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtSearchCity"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_corner_box"
            android:orientation="horizontal"
            android:padding="16dp"
            android:visibility="@{weatherModel != null &amp;&amp; !isAPICalled ? View.VISIBLE : View.GONE}"
            tools:visibility="gone">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:lines="1"
                    android:maxLines="1"
                    android:text="@{weatherModel.cityName}"
                    android:textColor="@color/text_color"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="Virginia Beach" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@{temprature+ `°`}"
                    android:textColor="@color/text_color"
                    android:textSize="60sp"
                    android:textStyle="bold"
                    tools:text="30" />

            </LinearLayout>

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                app:imageUrl="@{weatherModel.weatherIcon}"
                tools:src="@mipmap/ic_launcher" />


        </RelativeLayout>
    </RelativeLayout>
</layout>

